<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detailToolbarBookImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/toolbar_book_detail_placeholder"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/mylibrary_detail_title_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/book_detail_title_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar" />

            <TextView
                android:id="@+id/mylibrary_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/amiko"
                android:text="@string/book_detail_title_default"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/mylibrary_detail_title_label"
                app:layout_constraintStart_toStartOf="@id/mylibrary_detail_title_label"
                app:layout_constraintTop_toBottomOf="@id/mylibrary_detail_title_label" />

            <TextView
                android:id="@+id/mylibrary_detail_description_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/book_detail_desc_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/mylibrary_detail_title"
                app:layout_constraintStart_toStartOf="@id/mylibrary_detail_title"
                app:layout_constraintTop_toBottomOf="@id/mylibrary_detail_title" />

            <TextView
                android:id="@+id/mylibrary_detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/amiko"
                android:text="@string/book_detail_default_desc"
                app:layout_constraintEnd_toEndOf="@id/mylibrary_detail_description_label"
                app:layout_constraintStart_toStartOf="@id/mylibrary_detail_description_label"
                app:layout_constraintTop_toBottomOf="@id/mylibrary_detail_description_label" />

            <TextView
                android:id="@+id/mylibrary_detail_authors_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Authors:"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/mylibrary_detail_description"
                app:layout_constraintStart_toStartOf="@id/mylibrary_detail_description"
                app:layout_constraintTop_toBottomOf="@id/mylibrary_detail_description" />

            <TextView
                android:id="@+id/mylibrary_detail_authors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/amiko"
                android:text="@string/book_detail_default_authors"
                app:layout_constraintEnd_toEndOf="@id/mylibrary_detail_authors_label"
                app:layout_constraintStart_toStartOf="@id/mylibrary_detail_authors_label"
                app:layout_constraintTop_toBottomOf="@id/mylibrary_detail_authors_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mylibrary_detail_share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mylibrary_detail_authors"
                app:layout_constraintStart_toStartOf="@id/mylibrary_detail_authors"
                android:layout_marginTop="40dp"
                android:text="Share"
                android:backgroundTint="@color/colorAccent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="Your review"
                app:layout_constraintTop_toBottomOf="@id/mylibrary_detail_share_btn"
                app:layout_constraintStart_toStartOf="@id/mylibrary_detail_share_btn"
                app:layout_constraintEnd_toEndOf="@+id/mylibrary_detail_authors_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:inputType="textMultiLine"
                    android:id="@+id/review_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>